Update README.md. Added some tests. TODO: Add pagination, more tests.
