# docs/swagger.yaml
@@ -22,6 +22,35 @@ definitions:
       visibility:
         $ref: '#/definitions/model.VisibilityID'
     type: object
+  model.NovelMetadataSmall:
+    properties:
+      adult:
+        type: boolean
+      author:
+        $ref: '#/definitions/model.UserMetadataSmall'
+      description:
+        type: string
+      id:
+        type: string
+      image:
+        type: string
+      language:
+        type: string
+      rateCount:
+        type: integer
+      status:
+        type: string
+      tagline:
+        type: string
+      title:
+        type: string
+      totalRating:
+        type: integer
+      views:
+        type: integer
+      visibility:
+        type: string
+    type: object
   model.NovelStatusID:
     enum:
     - 1
@@ -37,13 +66,15 @@ definitions:
       adult:
         type: boolean
       author:
-        $ref: '#/definitions/model.UserView'
+        $ref: '#/definitions/model.UserMetadataSmall'
       clicks:
         type: integer
       createAt:
         type: string
       description:
         type: string
+      followCount:
+        type: integer
       id:
         type: string
       image:
@@ -87,25 +118,51 @@ definitions:
       name:
         type: string
     type: object
+  model.UserMetadata:
+    properties:
+      displayname:
+        type: string
+      email:
+        type: string
+      image:
+        type: string
+      username:
+        type: string
+    type: object
+  model.UserMetadataSmall:
+    properties:
+      displayName:
+        type: string
+      id:
+        type: string
+      image:
+        type: string
+      username:
+        type: string
+    type: object
   model.UserView:
     properties:
       created_at:
         type: string
       displayName:
         type: string
+      followCount:
+        type: integer
+      followedCount:
+        type: integer
       id:
-        items:
-          type: integer
-        type: array
+        type: string
       image:
         type: string
+      novelCount:
+        type: integer
       username:
         type: string
     type: object
   model.VisibilityID:
     enum:
-    - 2
     - 1
+    - 2
     type: integer
     x-enum-varnames:
     - VisibilityPrivate
@@ -123,6 +180,8 @@ definitions:
     - 8
     - 9
     - 10
+    - 11
+    - 12
     type: integer
     x-enum-varnames:
     - BadInput
@@ -131,6 +190,8 @@ definitions:
     - BadPassword
     - BadUsername
     - BadDeviceName
+    - BadDisplayname
+    - BadEmail
     - UserAlreadyExists
     - InvalidLanguageFormat
     - TitleTooLong
@@ -152,17 +213,141 @@ definitions:
       username:
         type: string
     type: object
+  route.changePasswordCredential:
+    properties:
+      newPassword:
+        type: string
+      oldPassword:
+        type: string
+    type: object
   route.createNovelResult:
     properties:
       novel_id:
         type: string
     type: object
-host: localhost:8080
+  route.requiredCredential:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
 info:
   contact: {}
   title: Light novel API
   version: "1.0"
 paths:
+  /accounts/:username:
+    get:
+      parameters:
+      - description: UserId
+        in: path
+        name: userID
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.UserView'
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Get user's metadata
+      tags:
+      - accounts
+  /accounts/changepassword:
+    post:
+      consumes:
+      - application/json
+      description: 'Possible error: BadInput, BadPassword, WrongPassword'
+      parameters:
+      - description: Old and new password
+        in: body
+        name: credential
+        required: true
+        schema:
+          $ref: '#/definitions/route.changePasswordCredential'
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/route.ErrorJSON'
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: Change user's password
+      tags:
+      - accounts
+  /accounts/delete:
+    delete:
+      consumes:
+      - application/json
+      deprecated: true
+      description: 'Possible error: BadInput, BadPassword, BadUsername, UserNotFound'
+      parameters:
+      - description: User credentials
+        in: body
+        name: credential
+        required: true
+        schema:
+          $ref: '#/definitions/route.requiredCredential'
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/route.ErrorJSON'
+        "500":
+          description: Internal Server Error
+      summary: Delete user's account and all other data
+      tags:
+      - accounts
+  /accounts/followed/novels:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.NovelMetadataSmall'
+            type: array
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: Get user's followed novels
+      tags:
+      - accounts
+  /accounts/followed/users:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.UserMetadataSmall'
+            type: array
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: Get user's followed users
+      tags:
+      - accounts
   /accounts/login:
     post:
       consumes:
@@ -268,8 +453,107 @@ paths:
         expires
       tags:
       - accounts
-  /novel/:NovelID:
-    get:
+  /accounts/self:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.UserView'
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: Get user's metadata from session
+      tags:
+      - accounts
+  /accounts/update:
+    patch:
+      consumes:
+      - application/json
+      description: 'Possible error: BadInput, BadUsername, BadDisplayname, BadEmail,
+        UserAlreadyExists'
+      parameters:
+      - description: User metadata
+        in: body
+        name: credential
+        required: true
+        schema:
+          $ref: '#/definitions/model.UserMetadata'
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/route.ErrorJSON'
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: Update user's metadata
+      tags:
+      - accounts
+  /novel/:novelID:
+    delete:
+      deprecated: true
+      parameters:
+      - description: Novel ID
+        in: path
+        name: NovelID
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Delete the novel and all the related stuff like volumes, chapters,
+        comments, images with the provided novel id
+      tags:
+      - novel
+    patch:
+      consumes:
+      - application/json
+      description: 'Possible error code: MissingField, InvalidLanguageFormat, TitleTooLong,
+        TaglineTooLong'
+      parameters:
+      - description: Novel ID
+        in: path
+        name: NovelID
+        required: true
+        type: string
+      - description: Novel details
+        in: body
+        name: NovelDetails
+        required: true
+        schema:
+          $ref: '#/definitions/model.NovelMetadata'
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/route.ErrorJSON'
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Update the novel metadata with the provided metadata
+      tags:
+      - novel
+    post:
       description: If the novel is private, the user need to be logged in with the
         author account
       parameters:
@@ -285,8 +569,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.NovelView'
-        "401":
-          description: Unauthorized
         "404":
           description: Not Found
         "500":
@@ -298,8 +580,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: 'Possible error code: Missing field, Invalid language format, Title
-        too long, Tagline too long'
+      description: 'Possible error code: MissingField, InvalidLanguageFormat, TitleTooLong,
+        TaglineTooLong'
       parameters:
       - description: Novel details
         in: body
@@ -324,6 +606,33 @@ paths:
           description: Internal Server Error
       summary: Create a new novel with the provided metadata, return the created novel
         id
+      tags:
+      - novel
+  /novel/from/:userID:
+    post:
+      description: If the user is not logged in, only the public novels will be returned
+      parameters:
+      - description: User ID
+        in: path
+        name: UserID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.NovelMetadataSmall'
+            type: array
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Get all the novels from the user with the provided user id
       tags:
       - novel
 swagger: "2.0"
